# responsible_ai_reduce_hallucinations_for_genai_apps

./: .env.example  .gitignore  LICENSE-SUMMARY  README.md  lab0-deploy-sagemaker-ai-endpoint.ipynb  lab1-contextual-grounding.ipynb  lab2-response-level-detection.ipynb  lab3-token-probability-level-detection.ipynb  pyproject.toml
aim325_llm_hallucinations_labs/lab1/: lab1.ipynb
aim325_llm_hallucinations_labs/lab2/: Lab2-reinvent-2024-studio.ipynb  lambda_hallucination_detection.py  requirements.txt
aim325_reinvent_reduce_hallucinations_lab/: __init__.py
aim325_reinvent_reduce_hallucinations_lab/lab1/: lab1-v2.ipynb  requirements.txt
aim325_reinvent_reduce_hallucinations_lab/lab2/: reinvent2024-hallucinations-questions.csv
hallucination_utils/: __init__.py  bedrock_agents.py  llm_wrappers.py  mcp.py  streaming.py  tracing.py
hallucination_utils/bedrock_guardrails/: __init__.py  api.py  hook.py
hallucination_utils/models/: parallel.py  with_checks.py
hallucination_utils/strands_models/: __init__.py
hallucination_utils/types/: __init__.py  tracing.py
infra/: Bedrock-Knowledge-Base.yaml  README.md  SageMaker-Notebook.yaml
other-examples/bedrock-agent-self-reflection/: bedrock-agent-self-reflection.ipynb
other-examples/bedrock-knowledge-base-guardrails/: bedrock-rag-with-guardrails.ipynb
reduce_llm_hallucinations_labs/: SageMaker_Bedrock_Agents.yaml  requirements.txt
reduce_llm_hallucinations_labs/lab1/: lab1.ipynb  requirements.txt
reduce_llm_hallucinations_labs/lab2/: lab2.ipynb  lambda_hallucination_detection.py  requirements.txt  (+1 more)
(+12 files in other folders)
